nohup.out

  You can now view your Streamlit app in your browser.

  Local URL: http://localhost:8501
  Network URL: http://192.168.2.5:8501


  You can now view your Streamlit app in your browser.

  Local URL: http://localhost:8502
  Network URL: http://192.168.2.5:8502

  Stopping...
2021-08-10 17:46:27.856 Traceback (most recent call last):
  File "/home/dule/.local/lib/python3.8/site-packages/streamlit/script_runner.py", line 350, in _run_script
    exec(code, module.__dict__)
  File "/home/dule/Desktop/Legit_apps/Football_data_revolution/app.py", line 3, in <module>
    from apps import home, SingUp, model, LogIn, LogIn, Search , About , TandC_FAQ# import your app modules here
  File "/home/dule/Desktop/Legit_apps/Football_data_revolution/apps/LogIn.py", line 1451
    col1,col2 = st.beta_columns(2)
    ^
IndentationError: unexpected indent

2021-08-10 17:47:15.154 Traceback (most recent call last):
  File "/home/dule/.local/lib/python3.8/site-packages/streamlit/script_runner.py", line 350, in _run_script
    exec(code, module.__dict__)
  File "/home/dule/Desktop/Legit_apps/Football_data_revolution/app.py", line 3, in <module>
    from apps import home, SingUp, model, LogIn, LogIn, Search , About , TandC_FAQ# import your app modules here
  File "/home/dule/Desktop/Legit_apps/Football_data_revolution/apps/LogIn.py", line 1451
    col1,col2 = st.beta_columns(2)
    ^
IndentationError: unexpected indent

